# protei_task

./: CMakeLists.txt  Client.cpp  Client.h  Epoll.cpp  Server.cpp  Server.h  Socket.cpp  Socket.h  client.cpp  server.cpp
client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  Epoll.h
